# mediaplayer-fix

./: README.LINUX.md
common/: build.gradle
common/src/main/java/net/hacker/mediaplayer/: MediaPlayer.java  VideoDecoder.java
native/: build-linux.sh  enable-flatpak-host-ffmpeg.sh
native/linux/: CMakeLists.txt  mediaplayer.cpp
